--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -67,25 +67,25 @@ steps:
         gcloud compute instance-groups managed create $${GREEN_MIG} \
           --base-instance-name=web-green \
           --template=$${TEMPLATE} \
-          --size=${_MIG_SIZE} \
-          --zone=${_ZONE}
+          --size=2 \
+          --zone=asia-south1-a
 
         # Configure named ports
         gcloud compute instance-groups set-named-ports $${GREEN_MIG} \
           --named-ports=http:8080 \
-          --zone=${_ZONE}
+          --zone=asia-south1-a
 
         # Add green to backend service
-        gcloud compute backend-services add-backend ${_BACKEND_SERVICE} \
+        gcloud compute backend-services add-backend demo-backend \
           --instance-group=$${GREEN_MIG} \
-          --instance-group-zone=${_ZONE} \
+          --instance-group-zone=asia-south1-a \
           --global
 
         # Wait for health checks
         for i in {1..90}; do
-          HEALTH_STATUS=$(gcloud compute backend-services get-health ${_BACKEND_SERVICE} \
+          HEALTH_STATUS=$(gcloud compute backend-services get-health demo-backend \
             --instance-group=$${GREEN_MIG} \
-            --instance-group-zone=${_ZONE} \
+            --instance-group-zone=asia-south1-a \
             --global \
             --format="value(healthStatus[].state)")
           echo "Health status: $${HEALTH_STATUS}"
@@ -96,21 +96,13 @@ steps:
           sleep 5
         done
 
-        # Remove blue backend if it exists
-        if [[ -n "${_BLUE_MIG}" ]]; then
-          gcloud compute backend-services remove-backend ${_BACKEND_SERVICE} \
-            --instance-group=${_BLUE_MIG} \
-            --instance-group-zone=${_ZONE} \
-            --global || true
-        fi
+        # Remove blue backend (current MIG)
+        gcloud compute backend-services remove-backend demo-backend \
+          --instance-group=node-app-template-v2 \
+          --instance-group-zone=asia-south1-a \
+          --global || true
 
         echo "Blue-green deployment completed for ${SHORT_SHA}"
-
-substitutions:
-  _ZONE: "asia-south1-a"
-  _MIG_SIZE: "2"
-  _BLUE_MIG: ""
-  _BACKEND_SERVICE: ""
 
 images:
   - 'asia-south1-docker.pkg.dev/third-octagon-465311-r5/artifact-repo/simple-web-app:${SHORT_SHA}'
