--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -42,7 +42,7 @@ steps:
         EOL
         chmod +x startup.sh
 
-  # Step 4: Blue-Green Deployment with verified cleanup
+  # Step 4: Blue-Green Deployment
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     id: 'deploy-bluegreen'
     entrypoint: 'bash'
@@ -93,46 +93,39 @@ steps:
           sleep 5
         done
 
-        # Enhanced cleanup process
-        echo "Starting comprehensive cleanup..."
-        
-        # List all MIGs except the current one
+        # Get list of all old MIGs
+        echo "Starting cleanup of old resources..."
         OLD_MIGS=$(gcloud compute instance-groups managed list \
-          --filter="NOT name='${GREEN_MIG}'" \
+          --filter="NOT name=$${GREEN_MIG}" \
           --format="get(name)" \
-          --zones=asia-south1-a) || true
+          --zone=asia-south1-a) || true
 
-        if [[ -n "$${OLD_MIGS}" ]]; then
-          echo "Found old MIGs to cleanup: $${OLD_MIGS}"
-          
-          while IFS= read -r OLD_MIG; do
-            if [[ -n "$${OLD_MIG}" ]]; then
-              echo "Processing cleanup for MIG: $${OLD_MIG}"
-              
-              # Remove from backend service first
-              gcloud compute backend-services remove-backend demo-backend \
-                --instance-group=$${OLD_MIG} \
-                --instance-group-zone=asia-south1-a \
-                --global --quiet || true
-              
-              # Delete the MIG
-              gcloud compute instance-groups managed delete $${OLD_MIG} \
-                --zone=asia-south1-a --quiet || true
-              
-              # Delete corresponding template if it follows the naming pattern
-              if [[ $${OLD_MIG} == green-mig-* ]]; then
-                OLD_TEMPLATE="it-${OLD_MIG#green-mig-}"
-                echo "Deleting template: $${OLD_TEMPLATE}"
-                gcloud compute instance-templates delete $${OLD_TEMPLATE} --quiet || true
-              elif [[ $${OLD_MIG} == "node-app-template-v2" ]]; then
-                echo "Cleaning up node-app-template"
-                gcloud compute instance-templates delete "node-app-template" --quiet || true
-              fi
+        # Clean up each old MIG
+        for OLD_MIG in $${OLD_MIGS}; do
+          if [[ -n "$${OLD_MIG}" ]]; then
+            echo "Cleaning up MIG: $${OLD_MIG}"
+            
+            # Remove from backend service
+            gcloud compute backend-services remove-backend demo-backend \
+              --instance-group=$${OLD_MIG} \
+              --instance-group-zone=asia-south1-a \
+              --global --quiet || true
+            
+            # Delete the MIG
+            gcloud compute instance-groups managed delete $${OLD_MIG} \
+              --zone=asia-south1-a --quiet || true
+            
+            # Delete corresponding template
+            if [[ $${OLD_MIG} == green-mig-* ]]; then
+              OLD_TEMPLATE="it-${OLD_MIG#green-mig-}"
+              echo "Deleting template: $${OLD_TEMPLATE}"
+              gcloud compute instance-templates delete $${OLD_TEMPLATE} --quiet || true
+            elif [[ $${OLD_MIG} == "node-app-template-v2" ]]; then
+              echo "Cleaning up node-app-template"
+              gcloud compute instance-templates delete "node-app-template" --quiet || true
             fi
-          done <<< "$${OLD_MIGS}"
-        else
-          echo "No old MIGs found for cleanup"
-        fi
+          fi
+        done
 
         echo "✓ Blue-green deployment and cleanup completed for ${SHORT_SHA}"
 
