--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -81,19 +81,15 @@ steps:
           --instance-group-zone=$${ZONE} \
           --global
 
-        # Wait for new instances to be healthy before removing old ones
         echo "Waiting for new instances to become healthy..."
         for i in {1..36}; do
-          STATUS=$(gcloud compute backend-services get-health demo-backend \
-            --global \
-            --instance-group=$${GREEN_MIG} \
-            --instance-group-zone=$${ZONE} \
-            --format="get(status.healthStatus[0].healthState)")
+          STATUS=$(gcloud compute backend-services get-health demo-backend --global \
+            --format="get(status.healthStatus[].healthState)") || true
           echo "Health check attempt $i: $${STATUS}"
-          if [[ "$${STATUS}" == "HEALTHY" ]]; then
+          if [[ "$${STATUS}" == *"HEALTHY"* ]]; then
             echo "✓ New instances are healthy"
+            sleep 10  # Extra wait to ensure stability
             
-            # Get old MIGs only after new one is healthy
             echo "Starting cleanup of old resources..."
             OLD_MIGS=$(gcloud compute instance-groups managed list \
               --zones=$${ZONE} \
@@ -105,19 +101,18 @@ steps:
                 if [[ -n "$${OLD_MIG}" ]]; then
                   echo "Processing cleanup for MIG: $${OLD_MIG}"
                   
-                  # Remove from backend service
                   echo "Removing $${OLD_MIG} from backend service..."
                   gcloud compute backend-services remove-backend demo-backend \
                     --instance-group=$${OLD_MIG} \
                     --instance-group-zone=$${ZONE} \
                     --global --quiet || true
                   
-                  # Delete the MIG
+                  sleep 5  # Wait for backend service update
+                  
                   echo "Deleting MIG: $${OLD_MIG}..."
                   gcloud compute instance-groups managed delete $${OLD_MIG} \
                     --zone=$${ZONE} --quiet || true
                   
-                  # Delete corresponding template
                   if [[ $${OLD_MIG} == green-mig-* ]]; then
                     OLD_TEMPLATE="it-${OLD_MIG#green-mig-}"
                     echo "Deleting template: $${OLD_TEMPLATE}..."
